--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:2.0.5"
+            "org.slf4j:slf4j-simple:2.0.5",
+            'io.github.bonigarcia:webdrivermanager:5.3.2'
     )
 }
 
@@ -51,4 +52,11 @@ tasks.withType(Test) {
             exceptionFormat "short"
         }
     }
+}
+
+task android(type: Test) {
+    useJUnitPlatform {
+        includeTags 'android'
+    }
+
 }
