--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.2",
+            'org.aeonbits.owner:owner:1.0.4',
             "org.slf4j:slf4j-simple:2.0.5",
             'io.github.bonigarcia:webdrivermanager:5.3.2'
     )
@@ -54,9 +55,14 @@ tasks.withType(Test) {
     }
 }
 
+task ios(type: Test) {
+    useJUnitPlatform {
+        includeTags 'ios'
+    }
+}
+
 task android(type: Test) {
     useJUnitPlatform {
         includeTags 'android'
     }
-
 }
