--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,13 @@ dependencies {
             "io.appium:java-client:8.3.0",
             "io.rest-assured:rest-assured:5.3.0",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
+            'org.projectlombok:lombok:1.18.22',
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:2.0.5",
-            "org.aeonbits.owner:owner:1.0.12",
-            "io.github.bonigarcia:webdrivermanager:5.3.2"
+            "org.slf4j:slf4j-simple:2.0.6",
+            'org.aeonbits.owner:owner:1.0.4',
+            'io.github.bonigarcia:webdrivermanager:5.3.2',
+            'org.assertj:assertj-core:3.23.1'
     )
 }
 
